--- a/client/src/Modals/DeleteGroupModal.scss
+++ b/client/src/Modals/DeleteGroupModal.scss
@@ -146,11 +146,11 @@
 @keyframes deleteGroupModalContentPopIn {
     from {
         width: 25vw;
-        min-height: 20vh;
+        min-height: 30vh;
     }
 
     to {
-        width: 28vw;
+        width: 29vw;
         min-height: 40vh;
     }
 }
